# energiapro

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release-cli.yml  release-sdk.yml
crates/energiapro-cli/: Cargo.toml  README.md
crates/energiapro-cli/homebrew/: energiapro.rb
crates/energiapro-cli/src/: main.rs
crates/energiapro-cli/src/commands/: installations.rs  measurements.rs  mod.rs
crates/energiapro-cli/src/helpers/: mod.rs  output.rs  table.rs
crates/energiapro-sdk/: Cargo.toml  README.md
crates/energiapro-sdk/examples/: basic.rs  measurements.rs  with_options.rs
crates/energiapro-sdk/src/: energiapro.rs  lib.rs
crates/energiapro-sdk/src/client/: client.rs  helpers.rs  mod.rs  options.rs  token_manager.rs  tokens.rs
crates/energiapro-sdk/src/errors/: api_error_code.rs  energiapro_error.rs  mod.rs
crates/energiapro-sdk/src/models/: installation.rs  measurement.rs  mod.rs
crates/energiapro-sdk/src/requests/: api_request.rs  authenticate.rs  installations.rs  measurements.rs  mod.rs
crates/energiapro-sdk/src/resources/: installations.rs  measurements.rs  mod.rs
crates/energiapro-sdk/src/responses/: authenticate.rs  installations.rs  measurements.rs  mod.rs
crates/energiapro-sdk/src/types/: date_input.rs  measurement_scope.rs  mod.rs
