[package]
name = "energiapro-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "energiapro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
energiapro-sdk = { path = "../energiapro-sdk" }
polars = { version = "0.46", default-features = false, features = ["csv", "json", "parquet"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
