[package]
name = "energiapro-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the EnergiaPro API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nhedger/energiapro"
authors = ["Nicolas Hedger <nicolas@hedger.ch>"]

[[bin]]
name = "energiapro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
energiapro = { path = "../energiapro-sdk" }
polars = { version = "0.53.0", default-features = false, features = ["csv", "json", "parquet"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
