[package]
name = "energiapro"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for the EnergiaPro API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nhedger/energiapro"
authors = ["Nicolas Hedger <nicolas@hedger.ch>"]


[dependencies]
bcrypt = "0.18.0"
chrono = "0.4.41"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
